# sanema

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SanemaScriptSystem.cpp  SanemaScriptSystem.h  SanemaScriptSystemImpl.cpp  SanemaScriptSystemImpl.h  ScriptEntry.cpp  ScriptEntry.h  ScriptID.cpp  ScriptID.h  expressions.cpp  expressions.h  functions.cpp  functions.h  literals.cpp  literals.h  sanema_main.cpp  types.cpp  types.h  vcpkg.json
.github/workflows/: cmake-single-platform.yml
binding/: BindingCollection.cpp  BindingCollection.h  BindingCollection.ixx  FieldBinding.cpp  FieldBinding.h  FunctionBinding.cpp  FunctionBinding.h  FunctionBinding.ixx  IYieldableFunction.h  MethodBinding.cpp  MethodBinding.h  TypeBinding.cpp  TypeBinding.h  Value.cpp  Value.h  Value.ixx
built-in/: built_in_functions.cpp  built_in_functions.h  generators.cpp  generators.h  print.cpp  print.h
built-in/strings/: strings.cpp  strings.cpp~  strings.h
common/: FunctionCollection.cpp  FunctionCollection.h  TypeCollection.cpp  TypeCollection.h
compiler/: Backend.cpp  Backend.h  ByteCodeCompiler.cpp  ByteCodeCompiler.h
interfacing/: Argument.cpp  Argument.h
optimizer/: ConstantFoldingPass.cpp  ConstantFoldingPass.h  ConstantPropagationPass.cpp  ConstantPropagationPass.h  DeadCodeEliminationPass.cpp  DeadCodeEliminationPass.h  OptimizationPass.h  Optimizer.cpp  Optimizer.h  PeepholeOptimizationPass.cpp  PeepholeOptimizationPass.h  RedundantCopyEliminationPass.cpp  RedundantCopyEliminationPass.h  TailCallOptimizationPass.cpp  TailCallOptimizationPass.h
parsing/: FunctionCollection.cpp  FunctionCollection.h  SanemaParser.cpp  SanemaParser.hpp  ValidationStage.cpp  ValidationStage.h
res/: test.san
strings/: strings.cpp  strings.ixx
test/: basic_tests.cpp  benchmarks.cpp  branching_tests.cpp  chained_operators.cpp  divide_tests.cpp  execute_function_from_native.cpp  fibonacci.py  helpers.cpp  helpers.h  multiply_tests.cpp  parameter_passing.cpp  sanema_function_calling.cpp  string_manitpulation.cpp  test.cpp  type_binding.cpp  yield_tests.cpp  yieldable_native_tests.cpp
util/: lambda_visitor.hpp
vm/: ByteCode.cpp  ByteCode.h  ContextFrame.cpp  ContextFrame.h  OperandType.cpp  OperandType.h  VM.cpp  VM.h  VMInstruction.cpp  VMInstruction.h  opcodes.h
